--- a/partials/_layout.scss
+++ b/partials/_layout.scss
@@ -117,6 +117,8 @@
 
 .about-description {
   h2 {
+    display: flex;
+    justify-content: center;
     font-size: 38px;
     margin-bottom: 24px;
   }
